--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -18,8 +18,8 @@ h1 {
 }
 
 h2 {
-  font-size: 4rem;
-  line-height: 5rem;
+  font-size: 5rem;
+  line-height: 6rem;
 }
 
 h3 {
@@ -63,6 +63,23 @@ a:hover, a:active {
   text-decoration: underline;
 }
 
+.link-article {
+  color: inherit;
+}
+
+.link-article:hover, .link-article:active {
+  color: inherit;
+  text-decoration: none;
+}
+.link-article:hover h1, .link-article:active h1 {
+  color: #09B2BD !important;
+  transition: .25s;
+}
+
+span.categorie {
+  color: #FF5C00;
+}
+
 .img-article {
   object-fit: cover;
   height: 100%;
@@ -74,6 +91,8 @@ button {
   padding: 1rem .5rem;
   display: block !important;
   margin: 1rem 0;
+  font-size: 1.5rem !important;
+  line-height: 3rem;
 }
 
 button:hover, button:active {
@@ -107,6 +126,7 @@ button:hover, button:active {
   #travel {
     margin-top: 8rem;
     padding-top: 6rem;
+    padding-bottom: 5rem;
   }
   #travel h1 {
     margin-bottom: 2rem;
@@ -114,8 +134,45 @@ button:hover, button:active {
   #travel .map img {
     display: none;
   }
-  #travel .video {
+  #travel .second-col {
+    margin-top: 4rem;
     display: block;
+  }
+
+  #all-articles .link-article {
+    margin-bottom: 4rem;
+  }
+  #all-articles .article {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1rem;
+    align-items: end;
+  }
+  #all-articles .article img {
+    grid-column: 3 / 5;
+    grid-row: 1 / 2;
+  }
+  #all-articles .article .align-bottom {
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+    align-self: end;
+  }
+  #all-articles .article .align-bottom h1 {
+    font-size: 4rem;
+    line-height: 5rem;
+    color: #333;
+    margin-bottom: 0 !important;
+  }
+  #all-articles .article .align-bottom .date {
+    margin-top: 1rem;
+  }
+  #all-articles .article .chapo {
+    grid-column: 1 / 5;
+    font-size: 2rem;
+    line-height: 3rem;
+  }
+  #all-articles .article button {
+    grid-column: 3 / 5;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1439px) {
@@ -153,6 +210,7 @@ button:hover, button:active {
   #travel {
     margin-top: -7rem;
     padding-top: 12rem;
+    padding-bottom: 10rem;
   }
   #travel .container {
     display: grid;
@@ -183,9 +241,45 @@ button:hover, button:active {
     grid-row: 2 / 3;
     align-self: center;
   }
-  #travel .container .video {
+  #travel .container .second-col {
     grid-column: 7 / 13;
     grid-row: 2 / 4;
+  }
+
+  #all-articles {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 3rem;
+  }
+  #all-articles .link-article {
+    margin-bottom: 12rem;
+  }
+  #all-articles .article {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 1rem;
+    align-items: end;
+  }
+  #all-articles .article img {
+    grid-column: 3 / 6;
+    grid-row: 1 / 2;
+  }
+  #all-articles .article .align-bottom {
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+    align-self: end;
+  }
+  #all-articles .article .align-bottom h1 {
+    color: #333;
+    margin-bottom: 0 !important;
+  }
+  #all-articles .article .align-bottom .date {
+    margin-top: 1rem;
+  }
+  #all-articles .article .chapo {
+    grid-column: 1/6;
+  }
+  #all-articles .article button {
+    grid-column: 4/6;
   }
 }
 @media only screen and (min-width: 1440px) {
@@ -222,6 +316,7 @@ button:hover, button:active {
   #travel {
     margin-top: -7rem;
     padding-top: 12rem;
+    padding-bottom: 10rem;
   }
   #travel .container {
     display: grid;
@@ -253,12 +348,48 @@ button:hover, button:active {
     grid-row: 2 / 3;
     align-self: center;
   }
-  #travel .container .video {
+  #travel .container .second-col {
     grid-column: 7 / 13;
     grid-row: 2 / 4;
   }
-  #travel .container .video img {
+  #travel .container .second-col img {
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+  }
+
+  #all-articles {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 3rem;
+  }
+  #all-articles .link-article {
+    margin-bottom: 12rem;
+  }
+  #all-articles .article {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 1rem;
+    align-items: end;
+  }
+  #all-articles .article img {
+    grid-column: 3 / 6;
+    grid-row: 1 / 2;
+  }
+  #all-articles .article .align-bottom {
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+    align-self: end;
+  }
+  #all-articles .article .align-bottom h1 {
+    color: #333;
+    margin-bottom: 0 !important;
+  }
+  #all-articles .article .align-bottom .date {
+    margin-top: 1rem;
+  }
+  #all-articles .article .chapo {
+    grid-column: 1/6;
+  }
+  #all-articles .article button {
+    grid-column: 4/6;
   }
 }
 .container {
@@ -376,10 +507,29 @@ nav .secondaryNav li:hover {
   grid-column: 1 / 4;
 }
 #travel .video .content h3 {
+  margin-top: 1rem;
   color: #09B2BD;
+}
+#travel .video:hover, #travel .video:active {
+  transition: .25s;
+}
+#travel .video:hover h3, #travel .video:active h3 {
+  color: #fff;
 }
 #travel button {
   background-color: #FF5C00 !important;
+}
+#travel button:hover, #travel button:active {
+  background-color: #FF7A2F !important;
+}
+
+#second-level {
+  margin-top: 10rem;
+}
+
+#all-articles {
+  margin-top: 3rem;
+  display: grid;
 }
 
 #categories {
@@ -404,43 +554,6 @@ nav .secondaryNav li:hover {
 }
 #categories .container .cat h1, #categories .container .cat h2, #categories .container .cat h3, #categories .container .cat h4, #categories .container .cat h5, #categories .container .cat h6 {
   color: #333;
-}
-
-#second-level {
-  margin-top: 10rem;
-}
-
-#all-articles {
-  margin-top: 3rem;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 3rem;
-}
-#all-articles .article {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-gap: 1rem;
-  align-items: end;
-}
-#all-articles .article img {
-  grid-column: 3/6;
-  grid-row: 1 / 2;
-  height: 32rem;
-}
-#all-articles .article .align-bottom {
-  grid-column: 1/4;
-  grid-row: 1 / 2;
-  align-self: end;
-}
-#all-articles .article .align-bottom h1 {
-  color: #333;
-  margin-bottom: 0 !important;
-}
-#all-articles .article .chapo {
-  grid-column: 1/6;
-}
-#all-articles .article button {
-  grid-column: 4/6;
 }
 
 #newsletter {
