--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -63,7 +63,7 @@ body {
 // FONTS
 html { font-size: 50%;}
 h1 { font-size: 5rem; line-height: 6rem;}
-h2 { font-size: 4rem; line-height: 5rem;}
+h2 { font-size: 5rem; line-height: 6rem;}
 h3 { font-size: 4rem; line-height: 5rem;}
 p { font-size: 2rem; line-height: 3rem;}
 p.surtitre { margin-bottom: 2rem; }
@@ -79,6 +79,16 @@ h1, h2, h3, h4, h5, h6 {
 a { color: $orange; text-decoration: none;}
 a:hover, a:active { color: $orange; text-decoration: underline;}
 
+.link-article { color: inherit; }
+.link-article:hover, .link-article:active { 
+  color: inherit; 
+  text-decoration: none; 
+  h1 {
+    color: $hotelblue!important; transition: .25s; 
+  } 
+}
+
+span.categorie { color: $orange; }
 // images
 .img-article {
   object-fit: cover;
@@ -94,6 +104,8 @@ button {
   padding: 1rem .5rem;
   display: block!important;
   margin: 1rem 0;
+  font-size: 1.5rem!important;
+  line-height: 3rem;
 }
 button:hover, button:active {
   background: $hotelblue-darker !important;
@@ -126,11 +138,53 @@ button:hover, button:active {
   #travel {
     margin-top: 8rem;
     padding-top: 6rem;
+    padding-bottom: 5rem;
     h1 {
       margin-bottom: 2rem;
     }
     .map { img {display: none;} }
-    .video { display: block; }
+    .second-col {
+      margin-top: 4rem;
+      display: block;
+    }
+  }
+
+  #all-articles {
+    .link-article { margin-bottom: 4rem; }
+
+    .article {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 1rem;
+      align-items: end;
+
+      img {
+        grid-column: 3 / 5;
+        grid-row: 1 / 2;
+      }
+
+      .align-bottom {
+        grid-column: 1 / 4;
+        grid-row: 1 / 2;
+        align-self: end;
+        h1 {
+          font-size: 4rem;
+          line-height: 5rem;
+          color: $anthracite;
+          margin-bottom: 0!important;
+        }
+      .date { margin-top: 1rem; }
+      }
+
+      .chapo {
+        grid-column: 1 / 5;
+        font-size: 2rem;
+        line-height: 3rem;
+      }
+      button {
+        grid-column: 3 / 5;
+      }
+    }
   }
 }
 
@@ -162,7 +216,6 @@ button:hover, button:active {
       .image {
         grid-column: 1 / 8;
         grid-row: 1 / 5;
-        // height: 53rem;
       }
     }
 
@@ -170,6 +223,7 @@ button:hover, button:active {
   #travel {
     margin-top: -7rem;
     padding-top: 12rem;
+    padding-bottom: 10rem;
     .container {
       display: grid;
       grid-template-columns: repeat(12, 1fr);
@@ -198,12 +252,50 @@ button:hover, button:active {
           align-self: center;
         }
       }
-      .video {
+      .second-col {
         grid-column: 7 / 13;
         grid-row: 2 / 4;
       }
     }
   }
+
+  #all-articles {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 3rem;
+    .link-article { margin-bottom: 12rem; }
+
+    .article {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-gap: 1rem;
+      align-items: end;
+
+      img {
+        grid-column: 3 / 6;
+        grid-row: 1 / 2;
+      }
+
+      .align-bottom {
+        grid-column: 1 / 4;
+        grid-row: 1 / 2;
+        align-self: end;
+        h1 {
+          color: $anthracite;
+          margin-bottom: 0!important;
+        }
+      .date { margin-top: 1rem; }
+      }
+
+      .chapo {
+        grid-column: 1/6;
+      }
+      button {
+        grid-column: 4/6;
+      }
+    }
+  }
+
+
 }
 
 // large desktops
@@ -233,13 +325,14 @@ button:hover, button:active {
       .image {
         grid-column: 1 / 8;
         grid-row: 1 / 5;
-        // height: 53rem;
       }
     }
   }
+
   #travel {
     margin-top: -7rem;
     padding-top: 12rem;
+    padding-bottom: 10rem;
     .container {
       display: grid;
       grid-template-columns: repeat(12, 1fr);
@@ -269,13 +362,50 @@ button:hover, button:active {
           align-self: center;
         }
       }
-      .video {
+      .second-col {
         grid-column: 7 / 13;
         grid-row: 2 / 4;
 
         img {
           box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
         }
+      }
+    }
+  }
+
+  #all-articles {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 3rem;
+    .link-article { margin-bottom: 12rem; }
+
+    .article {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-gap: 1rem;
+      align-items: end;
+
+      img {
+        grid-column: 3 / 6;
+        grid-row: 1 / 2;
+        // height: 32rem;
+      }
+
+      .align-bottom {
+        grid-column: 1 / 4;
+        grid-row: 1 / 2;
+        align-self: end;
+        h1 {
+          color: $anthracite;
+          margin-bottom: 0!important;
+        }
+      .date { margin-top: 1rem; }
+      }
+
+      .chapo {
+        grid-column: 1/6;
+      }
+      button {
+        grid-column: 4/6;
       }
     }
   }
@@ -361,6 +491,7 @@ nav {
 
   h1 { color: $orange-lighter;}
   .desc { color: $beige;}
+
   .video {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -386,13 +517,34 @@ nav {
       grid-column: 1 / 4;
 
       h3 {
+        margin-top: 1rem;
         color: $hotelblue;
       }
     }
   }
-  button {
-    background-color: $orange!important;
+  .video:hover, .video:active {
+    transition: .25s;
+    h3 { color: $blanc; }
   }
+  button { background-color: $orange!important; }
+  button:hover, button:active { background-color: $orange-lighter!important; }
+}
+
+#second-level {
+
+  margin-top: 10rem;
+
+  .container {
+
+  }
+
+}
+
+#all-articles {
+  margin-top: 3rem;
+
+  display: grid;
+
 }
 
 #categories {
@@ -425,59 +577,6 @@ nav {
   }
 
 
-}
-
-#second-level {
-
-  margin-top: 10rem;
-
-  .container {
-
-  }
-
-}
-
-#all-articles {
-  margin-top: 3rem;
-
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 3rem;
-
-  .article {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 1rem;
-    // grid-template-rows: 8rem;
-    align-items: end;
-
-    img {
-      grid-column: 3/6;
-      grid-row: 1 / 2;
-      height: 32rem;
-    }
-
-    .align-bottom {
-      grid-column: 1/4;
-      grid-row: 1 / 2;
-      align-self: end;
-      // align-self: bottom;
-      // justify-self: bottom;
-      h1 {
-        color: $anthracite;
-        margin-bottom: 0!important;
-      }
-    }
-
-    .chapo {
-      grid-column: 1/6;
-      // grid-row: 5/7;
-    }
-    button {
-      grid-column: 4/6;
-      // grid-row: 7/8;
-    }
-  }
 }
 
 #newsletter {
