--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -103,9 +103,23 @@ button:hover, button:active {
   background-color: #F6F1F1;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) and (orientation: portrait) {
   .container {
     margin: 0 2rem;
+  }
+
+  nav {
+    height: 100%;
+    width: 100%;
+  }
+  nav ul li {
+    margin: 2rem 0;
+    width: 100%;
+    display: block !important;
+    border: none !important;
+  }
+  nav ul li:hover, nav ul li:active {
+    background: #EFE6E6;
   }
 
   header {
@@ -181,6 +195,10 @@ button:hover, button:active {
     padding: 0 2rem;
   }
 
+  nav ul li {
+    margin: 0 1rem;
+  }
+
   #alaune {
     padding-top: 5rem;
   }
@@ -230,16 +248,17 @@ button:hover, button:active {
     display: grid;
   }
   #travel .container .map img {
-    grid-column: 1 / 6;
-    grid-row: 1 / 5;
-    margin-left: -6rem;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    margin-left: -3rem;
     opacity: 0.2;
   }
   #travel .container .map button {
     z-index: 1000;
-    grid-column: 2 / 4;
-    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     align-self: center;
+    justify-self: center;
   }
   #travel .container .second-col {
     grid-column: 7 / 13;
@@ -276,15 +295,20 @@ button:hover, button:active {
     margin-top: 1rem;
   }
   #all-articles .article .chapo {
-    grid-column: 1/6;
+    grid-column: 1 / 6;
   }
   #all-articles .article button {
-    grid-column: 4/6;
+    grid-column: 4 / 6;
+    justify-self: end;
   }
 }
 @media only screen and (min-width: 1440px) {
   .container {
     margin: 0 auto;
+  }
+
+  nav ul li {
+    margin: 0 2rem;
   }
 
   #alaune {
@@ -336,17 +360,17 @@ button:hover, button:active {
     display: grid;
   }
   #travel .container .map img {
-    grid-column: 1 / 6;
-    grid-row: 1 / 5;
-    margin-left: -12rem;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    margin-left: -6rem;
     opacity: 0.2;
   }
   #travel .container .map button {
     z-index: 1000;
-    grid-row: 1 / 4;
-    grid-column: 2 / 4;
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
     align-self: center;
+    justify-self: center;
   }
   #travel .container .second-col {
     grid-column: 7 / 13;
@@ -435,7 +459,6 @@ nav ul li {
   text-transform: uppercase;
   letter-spacing: .1rem;
   padding: 2rem 0;
-  margin: 0 2rem;
   text-align: center;
 }
 nav .primaryNav {
@@ -485,26 +508,27 @@ nav .secondaryNav li:hover {
 }
 #travel .video {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
 }
 #travel .video .surtitre {
   grid-row: 1 / 2;
-  grid-column: 1 / 4;
+  grid-column: 1 / 2;
 }
 #travel .video img {
   border-radius: 0.5rem;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
-  grid-row: 2 / 5;
-  grid-column: 1 / 4;
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
 }
 #travel .video button {
-  grid-row: 3 / 4;
-  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+  align-self: center;
+  justify-self: center;
 }
 #travel .video .content {
   text-align: center;
-  grid-row: 5 / 6;
-  grid-column: 1 / 4;
+  grid-row: 3 / 4;
+  grid-column: 1 / 2;
 }
 #travel .video .content h3 {
   margin-top: 1rem;
