--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -125,7 +125,7 @@ button:hover, button:active {
     .container { margin: 0; }
     ul {
       width: 100%;
-      
+      padding: 2rem;
       li {
         margin: 2rem 0;
         width: 100%;
