change bg hover active

--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -126,7 +126,7 @@ button:hover, button:active {
     border: none !important;
   }
   nav ul li:hover, nav ul li:active {
-    background: #EFE6E6;
+    background: #F6F1F1;
   }
 
   header {
