--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -133,7 +133,7 @@ button:hover, button:active {
         border: none!important;
       }
       li:hover, li:active {
-        background: $BackgroundColor-darker;
+        background: $BackgroundColor;
       }
     }
   }
