--- a/theme/css/main2.css
+++ b/theme/css/main2.css
@@ -1,3 +1,4 @@
+@import url(vendors/knacss.css);
 @font-face {
   font-family: "Lato";
   src: url("../../f/Lato/Lato-Regular.ttf") format("truetype");
@@ -22,10 +23,11 @@
   font-weight: bold;
   font-style: italic;
 }
-
 @font-face {
   font-family: "Playfair Display";
   src: url("../../f/Playfair_Display/PlayfairDisplay-Black.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
+
+/*# sourceMappingURL=main2.css.map */
